# adat

./: .gitignore  CONTRIBUTING.md  README.md  modification.md
examples/: CMakeLists.txt  cxxopts.cpp  fmtlib.cpp  indicators.cpp  json.cpp  plog.cpp  python_string_methods.cpp  stl_container_slicer.cpp  tabulate.cpp  timers.cpp
include/adat/: cxxopts.hpp  indicators.hpp  python_string_methods.hpp  stl_container_slicer.hpp  tabulate.hpp  timers_for_benchmark.hpp
include/adat/fmt/: chrono.h  core.h  format.h
include/adat/nlohmann/: json.hpp
include/adat/plog/: ColorConsoleAppender.h  ConsoleAppender.h  CsvFormatter.h  DebugOutputAppender.h  EventLogAppender.h  FuncMessageFormatter.h  Init.h  Log.h  Logger.h  NativeEOLConverter.h  RollingFileAppender.h  RollingFileInitializer.h  TxtFormatter.h  UTF8Converter.h
third_party_libs/docs/: modification.md
third_party_libs/hpp_toolbox/: python_string_methods.hpp  timer.hpp
third_party_libs/hpp_toolbox/plog/: IAppender.h  MessageOnlyFormatter.h
